--- a/main.css
+++ b/main.css
@@ -1,3 +1,497 @@
-p {
-	color: red;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+body {
+  font-family: Open sans regular;
+}
+
+.header {
+  min-height: 100vh;
+  display: flex;
+  position: relative;
+  background-image: url("img/football_767.jpg");
+  background-color: #222449;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.header::after {
+  content: "";
+  background-color: #222449;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.8;
+  top: 0;
+  left: 0;
+}
+
+.header-wrap  {
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative;
+  z-index: 2;
+  margin: auto;
+}
+
+.header .header-wrap  {
+  padding-top: 33px;
+}
+
+.text-icon {
+  fill: #ffffff;
+  width: 134px;
+  height: 36px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header-title, .footer_title {
+  visibility: hidden;
+  position: absolute;
+}
+
+.header-content {
+  display: flex;
+  flex-wrap: wrap;
+  color: #ffffff;
+  font-size: 28px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 137px;
+  margin-bottom: 88px;
+}
+
+.tagline {
+  margin-left: 44px;
+  margin-top: 30px;
+}
+
+.buttons {
+  font-size: 8px;
+  margin-bottom: 84px;
+ }
+
+.download-button {
+  display: flex;
+  box-sizing: border-box;
+  height: 35px;
+  background-color: #5e3db3;
+  border-radius: 17px;
+  justify-content: center;
+  text-decoration: none;
+  align-items: center;
+}
+
+.download-button:nth-child(n+2) {
+  margin-top: 14px;
+}
+
+.icon {
+  fill: #ffffff;
+  width: 19px;
+  height: 18px;
+  display: block;
+}
+
+.button-name {
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  list-style-type: none;
+  padding-left: 1em;
+  margin: 0;
+  font-weight: bold;
+  display: block;
+}
+
+.button-logo {
+  margin-top: 0.5em;
+}
+
+.section-content {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 83px;
+  padding-bottom: 55px;
+}
+
+.section-content:nth-child(n+3) {
+  padding-top: 60px;
+}
+
+.persons-title {
+  font-size: 50px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #e7e7e7;
+  padding-left: 20px;
+  padding-top: 25px;
+}
+
+.person-img {
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: -55px;
+}
+
+.color-grey {
+  background-color: #fafafa;
+}
+
+.color-dark-grey {
+  background-color: #f5f4f9;
+}
+
+.color-violet {
+  background-color: #5e3db3;
+}
+
+.color-blue {
+  background-color: #090a36;
+}
+
+.color-blue, .color-violet  .description {
+  color: #ffffff;
+}
+
+.color-blue .section-number {
+  color: #8761e0;
+}
+
+.color-violet .section-number::after {
+  content: "";
+  width: 15px;
+  height: 4px;
+  background-color: #ffffff;
+  border-radius: 1px;
+  display: block;
+  margin-top: 3px;
+}
+
+.color-blue .section-number::after {
+  content: "";
+  width: 15px;
+  height: 4px;
+  background-color: #ffffff;
+  border-radius: 1px;
+  display: block;
+  margin-top: 3px;
+}
+
+.section-title {
+  display: flex;
+}
+
+.section-number {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.section-number::after {
+  content: "";
+  width: 15px;
+  height: 4px;
+  background-color: #5e3db3;
+  border-radius: 1px;
+  display: block;
+  margin-top: 3px;
+}
+
+.section-name {
+  font-size: 23px;
+  color: #c1c1c1;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-left: 9px;
+}
+
+.description {
+  padding-top: 30px;
+  font-size: 15px;
+}
+
+.action-img {
+  max-width: 100%;
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.actions .section-number {
+  color: #f5f6f7;
+  display: block;
+  box-sizing: border-box;
+  background-color: #5e3db3;
+  padding-left: 26px;
+  padding-top: 26px;
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  margin-top: -58px;
+  margin-left: 20px;
+}
+
+.actions .section-number::after {
+  content: "";
+  width: 15px;
+  height: 4px;
+  background-color: #8f78ca;
+  border-radius: 1px;
+  display: block;
+  margin-top: 5px;
+}
+
+.action-title {
+  color: #e7e7e7;
+  font-size: 28px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-top: 34px;
+  padding-left: 20px;
+}
+
+.actions .description {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 81px;
+  padding-top: 28px;
+}
+
+.footer {
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  background-image: url("img/game_767.jpg");
+  background-color: #222449;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.footer::after {
+  content: "";
+  background-color: #222449;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.8;
+  top: 0;
+  left: 0;
+}
+
+.footer .header-wrap  {
+  padding-bottom: 9px;
+}
+
+.footer_slogan {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 75px;
+}
+
+.footer_slogan_first {
+  font-size: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 13px;
+}
+
+.footer_slogan_second {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #9b8dc3;
+}
+
+.logo {
+  width: 58px;
+  height: 47px;
+  fill: #ffffff;
+  display: block;
+  border-radius: 12px;
+  background-color: #5e3db3;
+  padding: 13px 6px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 89px;
+  margin-bottom: 58px;
+}
+
+.footer .text-icon {
+  margin-top: 80px;
+}
+
+@media (min-width: 641px) and (max-width: 960px) {
+  .header {
+    background-image: url("img/football_1280.jpg");
+  }
+  .header .header-wrap  {
+    padding-top: 37px;
+  }
+  .header-content {
+    font-size: 64px;
+    font-weight: bold;
+    margin-left: 90px;
+    margin-top: 180px;
+  }
+  .text-icon {
+    width: 205px;
+    height: 57px;
+  }
+  .tagline {
+    margin-left: 107px;
+    margin-top: 32px;
+  }
+  .icon {
+    width: 42px;
+    height: 45px;
+  }
+  .buttons {
+    font-size: 14px;
+    margin-top: 312px;
+    display: flex;
+    justify-content: center;
+  }
+  .download-button {
+    height: 77px;
+    min-width: 250px;
+    border-radius: 35px;
+  }
+  .download-button:nth-child(n+2) {
+    margin-left: 30px;
+    margin-top: 0;
+  }
+  .button-name {
+    padding-left: 1.7em;
+  }
+ .athlets, .players {
+    position: relative;
+  }
+  .section-number {
+    font-size: 18px;
+  }
+  .section-number::after {
+    content: "";
+    width: 22px;
+    height: 5px;
+    margin-top: 7px;
+  }
+  .actions .section-number::after {
+    content: "";
+    width: 25px;
+    height: 5px;
+    margin-top: 9px;
+  }
+  .section-name {
+    font-size: 32px;
+  }
+  .persons-title {
+    font-size: 80px;
+    padding-top: 85px;
+    padding-bottom: 0;
+    padding-left: 43%;
+    padding-right: 32px;
+  }
+  .players .persons-title {
+    padding-left: 32px;
+  }
+  .athlets .person-img {
+    margin-left: -160px;
+    position: absolute;
+    top: 100px;
+  }
+  .players .person-img {
+    position: absolute;
+    right: 0;
+    top: 65px;
+  }
+  .athlets .section-content {
+    padding-left: 43%;
+    padding-right: 32px;
+  }
+  .color-grey {
+    background-color: #ffffff; 
+  }
+  .section-content {
+    padding-right: 43%;
+    padding-left: 32px;
+    padding-bottom: 40px;
+    padding-top: 40px;
+  }
+  .color-dark-grey, .color-blue, color-violet {
+    padding-top: -20px;
+  }
+  .description {
+    padding-top: 32px;
+    font-size: 16px;
+  }
+  .actions .section-number {
+    padding-left: 45px;
+    padding-top: 42px;
+    width: 116px;
+    height: 116px;
+    margin-top: -80px;
+    margin-left: 30px;
+    font-size: 24px;
+  }
+  .action-title {
+    font-size: 80px;
+    padding-top: 55px;
+    padding-left: 32px;
+  }
+  .actions .description {
+    padding-left: 32px;
+    font-size: 24px;
+  }
+  .footer {
+    background-image: url("img/game_1280.jpg");
+  }
+  .footer .header-wrap  {
+    padding-bottom: 20px;
+  }
+  .footer_slogan {
+    margin-bottom: 287px;
+  }
+  .footer_slogan_first {
+    font-size: 80px;
+    margin-bottom: 28px;
+  }
+  .footer_slogan_second {
+    font-size: 36px;
+  }
+  .logo {
+    width: 102px;
+    height: 85px;
+    border-radius: 25px;
+    padding: 26px 12px;
+    margin-top: 126px;
+    margin-bottom: 83px;
+  }
+  .footer .text-icon {
+    margin-top: 55px;
+  }
+}
+
+@font-face {
+  font-family: Open sans bold;
+  src: url("fonts/OpenSans-Bold.woff");
+  font-weight: 700;
+  font-style: normal;  
+}
+
+@font-face {
+  font-family: Open sans regular;
+  src: url("fonts/OpenSans-Regular.woff");
+  font-weight: 400;
+  font-style: normal;  
 }
