--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ body {
   padding-top: 25px;
 }
 
-.person-img {
+.person-img, .basketballer-img {
   max-width: 100%;
   display: flex;
   justify-content: center;
@@ -463,13 +463,13 @@ body {
     padding-left: 32px;
   }
 
-  .athlets .person-img {
+  .athlets .person-img, .basketballer-img {
     position: absolute;
     top: 100px;
     left: -160px;
   }
 
-  .players .person-img {
+  .players .person-img, .basketballer-img {
     position: absolute;
     top: 65px;
     right: 0;
@@ -610,13 +610,13 @@ body {
     padding-right: 192px;
   }
 
-  .athlets .person-img {
+  .athlets .person-img, .basketballer-img {
     position: absolute;
     top: 100px;
     left: -160px;
   }
 
-  .players .person-img {
+  .players .person-img, .basketballer-img {
     position: absolute;
     top: 65px;
     right: 0;
@@ -641,8 +641,12 @@ body {
     display: flex;
   }
 
-  .action-img {
-    width: 50vw;
+
+  .action-img-wrap {
+  	width: 50%;
+  	margin: 0;
+  	
+
   }
 
   .action-item:nth-child(even) {
@@ -653,7 +657,7 @@ body {
     display: flex;
     padding-left: 0;
     width: 50vw;
-    padding-top: 210px;
+    padding-top: 80px;
   }
 
   .action-info:nth-child(2n+) {
@@ -664,12 +668,12 @@ body {
     display: block;
     padding-left: 70px;
     padding-top: 62px;
-    width: 167px;
-    height: 155px;
+    width: 165px;
+    height: 151px;
     left: 0;
     right: 0;
     margin: auto;
-    top: 210px;
+    top: 80px;
   }
 
   .actions .section-number::after {
@@ -679,18 +683,19 @@ body {
     margin-top: 9px;
   }
 
-  .action-content {
-    padding-left: 129px;
-    padding-right: 192px;
+  .action-content-left {
+    padding-left: 128px;
+
   }
 
-  .action-content:nth-child(even) {
-    padding-right: 129px;
-    padding-left: 192px;
-  }
+  .action-content-right {
+     padding-left: 180px;
+     width: 364px;
+}
 
   .action-title {
     padding-top: 0;
+    font-size: 60px
   }
 
   .footer::after {
@@ -698,7 +703,7 @@ body {
     background-position: center;
   }
 
-  .title-container {
+  .title-wrap {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
@@ -722,4 +727,22 @@ body {
   .footer .buttons {
     margin-bottom: 262px;
   }
+
+.section-right-wrap {
+ 	margin-left: 50%;
+ }
+
+.person-img {
+	margin-left: 390px;
+}
+
+.section-left-wrap{
+     margin-left: 180px;
+     margin-right: 50%
+ }
+
+ .basketballer-img {
+ 	margin-left: 630px;
+ }
+
 }
